update params
