# nodes/FireCrawl/resources/default/crawl-url-with-websocket-monitoring/properties.ts
@@ -95,5 +95,89 @@ export const properties: INodeProperties[] = [
       },
     },
   },
+  {
+    displayName: 'Scrape Options',
+    name: 'scrapeOptions',
+    type: 'fixedCollection',
+    default: {},
+    description: 'Scraping options',
+    options: [
+      {
+        name: 'items',
+        displayName: 'Items',
+        values: [
+          {
+            type: 'multiOptions',
+            default: [],
+            description: 'Output format(s) for the scraped data.',
+            options: [
+              {
+                name: 'markdown',
+                value: 'markdown',
+              },
+              {
+                name: 'html',
+                value: 'html',
+              },
+              {
+                name: 'extract',
+                value: 'extract',
+              },
+            ],
+            name: 'formats',
+            displayName: 'formats',
+          },
+          {
+            type: 'fixedCollection',
+            default: {},
+            options: [
+              {
+                name: 'items',
+                displayName: 'Items',
+                values: [
+                  {
+                    type: 'string',
+                    default: '',
+                    description: 'The schema for structured data extraction.',
+                    name: 'schema',
+                    displayName: 'schema',
+                  },
+                  {
+                    type: 'string',
+                    default: '',
+                    description: 'The system prompt used for extraction.',
+                    name: 'systemPrompt',
+                    displayName: 'systemPrompt',
+                  },
+                  {
+                    type: 'string',
+                    default: '',
+                    description: 'Extraction prompt without schema.',
+                    name: 'prompt',
+                    displayName: 'prompt',
+                  },
+                ],
+              },
+            ],
+            name: 'extract',
+            displayName: 'extract',
+          },
+        ],
+      },
+    ],
+    routing: {
+      request: {
+        body: {
+          scrapeOptions: '={{$value.items}}',
+        },
+      },
+    },
+    displayOptions: {
+      show: {
+        resource: ['Default'],
+        operation: ['Crawl Url With Websocket Monitoring'],
+      },
+    },
+  },
 ]
 /* eslint-disable */
