# nodes/FireCrawl/resources/default/scrape-a-url-and-get-its-content/index.ts
@@ -4,11 +4,13 @@ import runHooks from './hooks'
 
 export const name = 'Scrape A Url And Get Its Content'
 
+/* eslint-disable */
 const rawOption: INodePropertyOptions = {
   name: 'Scrape A Url And Get Its Content',
   value: 'Scrape A Url And Get Its Content',
   action: 'Scrape a URL and get its content.',
-  description: 'Scrape a given URL to retrieve content in markdown, HTML, or other formats. This endpoint supports structured data extraction and dynamic actions.',
+  description:
+    'Scrape a given URL to retrieve content in markdown, HTML, or other formats. This endpoint supports structured data extraction and dynamic actions.\n',
   routing: {
     request: {
       method: 'POST',
@@ -16,6 +18,7 @@ const rawOption: INodePropertyOptions = {
     },
   },
 }
+/* eslint-disable */
 
 const { properties, option } = runHooks(rawOption, rawProperties)
 
