# openapi.yml
@@ -25,6 +25,11 @@ paths:
                 limit:
                   type: integer
                   description: Limit the number of pages to crawl.
+                excludePaths:
+                  type: array
+                  items:
+                    type: string
+                  description: List of paths to exclude from the crawl.
                 allowBackwardLinks:
                   type: boolean
                   description: >-
@@ -33,6 +38,31 @@ paths:
                 webhook:
                   type: string
                   description: URL to send webhook events during the crawl process.
+                scrapeOptions:
+                  type: object
+                  description: Scraping options
+                  properties:
+                    formats:
+                      type: array
+                      items:
+                        type: string
+                        enum:
+                          - markdown
+                          - html
+                          - extract
+                      description: Output format(s) for the scraped data.
+                    extract:
+                      type: object
+                      properties:
+                        schema:
+                          type: string
+                          description: The schema for structured data extraction.
+                        systemPrompt:
+                          type: string
+                          description: The system prompt used for extraction.
+                        prompt:
+                          type: string
+                          description: Extraction prompt without schema.
               required:
                 - url
       responses:
@@ -150,6 +180,31 @@ paths:
                 limit:
                   type: integer
                   description: Limit the number of pages to crawl.
+                scrapeOptions:
+                  type: object
+                  description: Scraping options
+                  properties:
+                    formats:
+                      type: array
+                      items:
+                        type: string
+                        enum:
+                          - markdown
+                          - html
+                          - extract
+                      description: Output format(s) for the scraped data.
+                    extract:
+                      type: object
+                      properties:
+                        schema:
+                          type: string
+                          description: The schema for structured data extraction.
+                        systemPrompt:
+                          type: string
+                          description: The system prompt used for extraction.
+                        prompt:
+                          type: string
+                          description: Extraction prompt without schema.
       responses:
         '200':
           description: WebSocket connection initiated successfully.
@@ -177,6 +232,36 @@ paths:
                 webhook:
                   type: string
                   description: URL to send webhook events to.
+                excludePaths:
+                  type: array
+                  items:
+                    type: string
+                  description: List of paths to exclude from the crawl.
+                scrapeOptions:
+                  type: object
+                  description: Scraping options
+                  properties:
+                    formats:
+                      type: array
+                      items:
+                        type: string
+                        enum:
+                          - markdown
+                          - html
+                          - extract
+                      description: Output format(s) for the scraped data.
+                    extract:
+                      type: object
+                      properties:
+                        schema:
+                          type: string
+                          description: The schema for structured data extraction.
+                        systemPrompt:
+                          type: string
+                          description: The system prompt used for extraction.
+                        prompt:
+                          type: string
+                          description: Extraction prompt without schema.
               required:
                 - url
       responses:
